--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "coronapi",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "A Coronavirus (COVID-19) tracking API.",
   "main": "./dist/index.js",
   "dependencies": {
-    "axios": "^0.19.2",
-    "cheerio": "^1.0.0-rc.3"
+    "parse5": "^5.1.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -28,7 +27,7 @@
   },
   "homepage": "https://github.com/LKD70/coronapi#readme",
   "devDependencies": {
-    "@types/cheerio": "^0.22.16",
+    "@types/node": "^13.9.1",
     "typescript": "^3.8.3"
   }
 }
